single elimination beta
